<resources>
    <string name="app_name">ADCWeek2</string>
    <string name="hint_search">Search Here</string>
    <string name="label_ten">10</string>
    <string name="label_overview">Overview</string>
    <string name="label_cast">Cast</string>
    <string name="label_review">Review</string>
    <string name="label_more">More</string>
    <string name="format_sub_title">%s | %s | %s</string>
    <string name="label_studios">Studios</string>
    <string name="label_share">Share</string>
    <string name="label_download">Download</string>
    <string name="label_open_in_youtube">Open in Youtube</string>
    <string name="format_date_and_language">%s | %s</string>
    <string name="format_share">%s - %s</string>
    <string name="format_rating">%.1f/</string>
</resources>