<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPaleGray"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_250dp"
            android:scaleType="fitXY"
            android:src="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pbBanner"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:scaleType="fitXY"
            android:src="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@id/imgBanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgBanner" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/llMovie"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            android:src="@drawable/ic_play_button"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/llMovie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44dp"
            android:background="@drawable/bg_gradient_detail"
            app:layout_constraintBottom_toTopOf="@id/llMovie" />

        <LinearLayout
            android:id="@+id/llMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPetrol"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/imgBanner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieTitle"
                    style="@style/MovieCatalogueTextView.Bold.White"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_18sp"
                    tools:text="Joker" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMovieRating"
                        style="@style/MovieCatalogueTextView.Medium.White"
                        android:drawableStart="@drawable/ic_star"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:textSize="@dimen/text_size_18sp"
                        tools:text="8.8/" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MovieCatalogueTextView.Light.White"
                        android:text="@string/label_ten"
                        android:textSize="@dimen/text_size_11sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle"
                style="@style/MovieCatalogueTextView.White"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textSize="@dimen/text_size_10sp"
                tools:text="29 October 2019 | Crime, Thriller, Drama | English" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/youtube_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black"
            android:paddingTop="@dimen/dimen_50dp"
            android:paddingBottom="@dimen/dimen_4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:showFullScreenButton="false" />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/dimen_25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextAppearance="@style/MovieCatalogueTabLayout"
            app:titleTextColor="@color/colorWhite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPaleGray"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen_16dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDetailTitle"
                    style="@style/MovieCatalogueTextView.Bold.Black"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:textSize="@dimen/text_size_16sp"
                    tools:text="TOM AND JERRY" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDetailGenre"
                    style="@style/MovieCatalogueTextView.BlackTwo"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:textSize="@dimen/text_size_14sp"
                    tools:text="Comedy, Tolol, Idiot" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDetailDateAndLanguage"
                    style="@style/MovieCatalogueTextView"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:textSize="@dimen/text_size_12sp"
                    tools:text="12 Januari 2020 | English" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnShare"
                        style="@style/MovieCatalogueTextView.Black"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_5dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:drawableTop="@drawable/ic_share_black"
                        android:drawablePadding="@dimen/dimen_5dp"
                        android:text="@string/label_share"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15sp"
                        app:drawableTint="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnDownload"
                        style="@style/MovieCatalogueTextView.Black"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="@dimen/dimen_5dp"
                        android:layout_weight="0.8"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:drawableTop="@drawable/ic_baseline_downloading_24"
                        android:drawablePadding="@dimen/dimen_5dp"
                        android:text="@string/label_download"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15sp"
                        app:drawableTint="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnOpen"
                        style="@style/MovieCatalogueTextView.Black"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_weight="0.1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:drawableTop="@drawable/ic_baseline_open_in_new_24"
                        android:drawablePadding="@dimen/dimen_5dp"
                        android:text="@string/label_open_in_youtube"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15sp"
                        app:drawableTint="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_half_dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@color/colorWarmGrey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_4dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvPoster"
                    android:layout_width="@dimen/dimen_80dp"
                    android:layout_height="@dimen/dimen_110dp"
                    app:cardCornerRadius="@dimen/dimen_10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgPoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        tools:src="@drawable/sample_image" />

                    <ProgressBar
                        android:id="@+id/pbPoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MovieCatalogueTextView.Medium.Black"
                        android:text="@string/label_overview"
                        android:textSize="@dimen/text_size_14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOverview"
                        style="@style/MovieCatalogueTextView.Black"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure." />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_half_dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@color/colorWarmGrey" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MovieCatalogueTextView.Medium.Black"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/label_studios"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>